@@ -1,8 +1,8 @@
-.\"	$NetBSD: bozohttpd.8,v 1.93 2023/06/07 20:22:22 mrg Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.94 2024/01/26 23:19:44 mrg Exp $
 .\"
 .\"	$eterna: bozohttpd.8,v 1.101 2011/11/18 01:25:11 mrg Exp $
 .\"
-.\" Copyright (c) 1997-2023 Matthew R. Green
+.\" Copyright (c) 1997-2024 Matthew R. Green
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd Sep 12, 2023
+.Dd Jan 26, 2024
 .Dt BOZOHTTPD 8
 .Os
 .Sh NAME
@@ -670,7 +670,7 @@ version 20230602.
 .Nm
 was written by
 .An Matthew R. Green
-.Aq Mt mrg@eterna.com.au .
+.Aq Mt mrg@eterna23.net .
 .Pp
 The large list of contributors includes:
 .Bl -dash
@@ -805,7 +805,7 @@ provided several clean up fixes, and man page updates
 provided various fixes
 .It
 .An Tyler Retzlaff
-.Aq Mt rtr@eterna.com.au
+.Aq Mt rtr@eterna23.net
 provided SSL support, cgi-bin fixes and much other random other stuff
 .It
 .An rudolf
@@ -860,7 +860,9 @@ There are probably others I have forgotten (let me know if you care)
 Please send all updates to
 .Nm
 to
-.Aq Mt mrg@eterna.com.au
+.Aq Mt mrg@eterna23.net
+or
+.Aq Mt netbsd-bugs@NetBSD.org
 for inclusion in future releases.
 .Sh BUGS
 .Nm
